--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>MXBModManager</title>
+  <title>MX Bikes Mod Manager</title>
+
 </head>
 
 <body>
   <div id="root"></div>
+  <script type="module" src="/src/renderer/renderer.ts"></script>
 </body>
 
 </html>
