finally fixed it... other things are broken, but ill fix later

--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <meta charset="UTF-8" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+	<head>
+		<meta charset="UTF-8" />
+		<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
-  <title>MX Bikes Mod Manager</title>
+  <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet"> -->
+		<title>MX Bikes Mod Manager</title>
+	</head>
 
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/renderer/renderer.ts"></script>
-</body>
-
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src/renderer/renderer.ts"></script>
+	</body>
 </html>
